k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: learnit-route
spec:
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
